--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         I am a PhD student in . 
  <a HREF="https://www.ucl.ac.uk/economics/">the Economics Department at University College London (UCL)</a>. 
          </p>
-        <p> Here you can find my <a HREF="files/cv.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
+        <p> Here you can find my <a HREF="files/cv_4.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
          <h1>Research</h1>
          <h2>Working papers</h2>
         <p> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
@@ -59,7 +59,7 @@ I also have experience in designing and implementing lab and online experiments 
               <i class="fas fa-envelope-square fa-2x"></i> </a>
           <a href="https://github.com/julenzaratepina>
               <i class="fab fa-github-square fa-2x"></i> </a>
-          <a HREF="files/cv.pdf">
+          <a HREF="files/cv_4.pdf">
               <i class="ai ai-cv-square ai-2x"></i>
           </a></br>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
