--- a/index.html
+++ b/index.html
@@ -67,5 +67,7 @@ I also have experience in designing and implementing lab and online experiments 
     </div>
     <script src="javascripts/scale.fix.js"></script>
     <script src="javascripts/accordi.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
   </body>
 </html>
