--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ I also have experience in designing and implementing lab and online experiments 
     </div>
     <script src="javascripts/scale.fix.js"></script>
     <script src="javascripts/accordi.js"></script>
+    <link rel="stylesheet" href="/css/academicons.min.css"/>
+
 
   </body>
 </html>
