--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:600|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link href="fonts/css/academicons.min.css" rel="stylesheet">
-    <link href="fonts/css/academicons.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/academicons.min.css"/>
+    <link href="/css/academicons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<meta name="viewport" content="width=device-width">-->
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
     <div class="wrapper">
@@ -36,7 +32,7 @@
 </p>
          <h2>Work in progress</h2>
          <button class="accordion">Social identity and decision-making under uncertainty
-</button>
+         </button>
 <div class="panel">
   <p>In this paper, I analyse how modal decisions within social groups  influence decision-making under uncertainty.  Specifically, I study how these modal decision are more often taken by members of the group as uncertainty increases. In a theoretical model, in which distancing from group's modal decision is penalised as a regret cost, I find that aligning with the in-group's modal decision  happens more often the higher is the identification with the group and it is also more frequent  under ambiguity than under risk. I design and run an online experiment  with a sample of US citizens in which social groups are formed through  political affiliation.  Results show that higher self-identification with the group leads to higher alignment with the group's modal decision and higher uncertainty (about the probability of the states of the world) generates an even stronger alignment with this decision for those with a high self-identification with the group.
 </p>
@@ -57,7 +53,7 @@ I also have experience in designing and implementing lab and online experiments 
       <footer>
           <a href="mailto:julen.pina.14@ucl.ac.uk" target="_blank">
               <i class="fas fa-envelope-square fa-2x"></i> </a>
-          <a href="https://github.com/julenzaratepina>
+          <a href="https://github.com/julenzaratepina">
               <i class="fab fa-github-square fa-2x"></i> </a>
           <a HREF="files/cv_4.pdf">
               <i class="ai ai-cv-square ai-2x"></i>
@@ -67,7 +63,6 @@ I also have experience in designing and implementing lab and online experiments 
     </div>
     <script src="javascripts/scale.fix.js"></script>
     <script src="javascripts/accordi.js"></script>
-    <link rel="stylesheet" href="/css/academicons.min.css"/>
 
 
   </body>
