--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <section>
          <h2></h2>
          <p>
-        I am a PhD student in . 
- <a HREF="https://www.ucl.ac.uk/economics/">the Economics Department at University College London (UCL)</a>. 
+        I am a PhD student in the
+ <a HREF="https://www.ucl.ac.uk/economics/"> Economics Department at University College London (UCL)</a>. 
          </p>
         <p> Here you can find my <a HREF="files/cv_4.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
          <h1>Research</h1>
