--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ I also have experience in designing and implementing lab and online experiments 
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    <script src="javascripts/accordi.js"></script>
+    <script src="javascripts/accordion.js"></script>
 
 
   </body>
