--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ I also have experience in designing and implementing lab and online experiments 
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    <script src="javascripts/accordion.js"></script>
+    <script src="javascript/scale.fix.js"></script>
+    <script src="javascript/accordion.js"></script>
 
 
   </body>
