--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ I also have experience in designing and implementing lab and online experiments 
           <a HREF="files/cv_4.pdf">
               <i class="ai ai-cv-square ai-2x"></i>
           </a></br>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">Github Pages</a>  &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascript/scale.fix.js"></script>
