--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
   
     <h1 style="margin-top:1cm">Teaching</h1>
-    <p>I have been a teaching assistant for several courses in the Economics Department at UCL: <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/game-theory-econ0027">Game Theory</a>, <a HREF="https://www.ucl.ac.uk/economics/econ0059-advanced-microeconomic-theory ">Advanced Microeconomic Theory</a>, <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/microeconomics-econ0013">Microecomics</a>, <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/basic-microeconomic-concepts-econ0011">Basic Microeconomic Concepts</a>. </p>
+    <p>I have been a teaching assistant for several courses in the Economics Department at UCL: <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/game-theory-econ0027">Game Theory</a>, <a HREF="https://www.ucl.ac.uk/economics/econ0059-advanced-microeconomic-theory ">Advanced Microeconomic Theory</a>, <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/microeconomics-econ0013">Microeconomics</a>, <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/basic-microeconomic-concepts-econ0011">Basic Microeconomic Concepts</a>. </p>
           <h1 style="margin-top:1cm">Miscellanous</h1>
 I also have experience in designing and implementing lab and online experiments  at  <a HREF="https://centreforfinance.org/experiments.htm">the Experimental Laboratory for Finance and Economics (ELFE) </a></p> 
       </section>
