--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h2>Julen Zarate-Pina</h2>
-      <img src="files/picture.png" alt="MainPicture" align="absbottom"/>
+       <!--  <img src="files/picture.png" alt="MainPicture" align="absbottom"/> -->
       </header>
       <section>
          <h2></h2>
