--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
 </p>
          <h2>Work in progress</h2>
-         <button class="accordion">Social identity and decision-making under uncertainty <div id="arrowdown"><i  class="fas fa-angle-down"></i></div> <div id="arrowup"><i class="fas fa-angle-up"></i></div></button>
+         <button class="accordion">Social identity and decision-making under uncertainty <div id="arrowdown"><i  aria-hidden="true"   class="fas fa-angle-down"></i></div> <div id="arrowup"><i  aria-hidden="true" class="fas fa-angle-up"></i></div></button>
 <div class="panel">
   <p><span style="font-weight: bold">Abstract:</span> In this paper, I analyse how modal decisions within social groups  influence decision-making under uncertainty.  Specifically, I study how these modal decision are more often taken by members of the group as uncertainty increases. In a theoretical model, in which distancing from group's modal decision is penalised as a regret cost, I find that aligning with the in-group's modal decision  happens more often the higher is the identification with the group and it is also more frequent  under ambiguity than under risk. I design and run an online experiment  with a sample of US citizens in which social groups are formed through  political affiliation.  Results show that higher self-identification with the group leads to higher alignment with the group's modal decision and higher uncertainty (about the probability of the states of the world) generates an even stronger alignment with this decision for those with a high self-identification with the group.
 </p>
