--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/academicons.min.css"/>
     <link href="css/academicons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="Nx6PLwpZYuMpwbc-ZphGIq-czlpPPDi9pvsIYGpOkEI" />
   </head>
   <body>
     <div class="wrapper">
