--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>Julen Zarate-Pina</h2>
-        <img src="files/picture.png" alt="MainPicture" align="absbottom"/> 
+        <h1>Julen Zarate-Pina</h1>
+        <img style="height:80%" src="files/picture.png" alt="MainPicture" align="absbottom"/> 
       </header>
       <section>
          <h2></h2>
