--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <header>
         <h1>Julen Zarate-Pina</h1>
-        <img style="height:50%" src="files/picture.png" alt="MainPicture" align="absbottom"/> 
+        <img src="files/picture.png" alt="MainPicture" align="absbottom"/> 
       </header>
       <section>
          <h2></h2>
