--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          </p>
         <p> Here you can find my <a HREF="files/cv_4.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
         <p>  <a href="mailto:julen.pina.14@ucl.ac.uk">
-              <i class="fas fa-envelope-square fa-1x"></i> </a> <a href="mailto:julen.pina.14@ucl.ac.uk">julen.zarate.14@ucl.ac.uk</a></p>
+              <i class="fas fa-envelope-square fa-1x"></i> </a> <a href="mailto:julen.pina.14@ucl.ac.uk">julen.pina.14@ucl.ac.uk</a></p>
          <h1>Research</h1>
          <h2>Working papers</h2>
         <p> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
