--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="css/accordion.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:600|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:600|Roboto" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ce93d3cc2d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/academicons.min.css"/>
     <link href="css/academicons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
