--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="wrapper">
       <header>
         <h1>Julen Zarate-Pina</h1>
-        <img src="files/picture.png" alt="MainPicture" align="absbottom"/> 
+        <img src="files/picture.jpg" alt="MainPicture" align="absbottom"/> 
       </header>
       <section>
          <h2></h2>
