--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Julen Zarate-Pina</title>
-
+    <link rel="canonical" href="https://julenzaratepina.github.io" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="css/accordion.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
