--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ I  have experience in designing, implementing and conducting lab and online expe
               <i class="fas fa-envelope-square fa-2x"></i> </a>
           <a href="https://github.com/julenzaratepina">
               <i class="fab fa-github-square fa-2x"></i> </a>
-          <a HREF="files/cv_4.pdf">
+          <a HREF="files/cv_zaratepina.pdf">
               <i class="ai ai-cv-square ai-2x"></i>
           </a></br>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a>  &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
