--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <p>
         I am a PhD student in the
  <a HREF="https://www.ucl.ac.uk/economics/"> Economics Department at University College London (UCL)</a>. 
-         <p>My research interests are experimental and behavioural economics, and decision theory, with a particular emphasis on how ambiguity affects economic agents' decision-making processes. 
+         <p>My research interests are experimental and behavioural economics, and decision theory, with particular emphasis on how ambiguity affects economic agents' decision-making processes. 
          </p>
         <p> Here you can find my <a HREF="files/cv_zaratepina.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
         <p>  <a href="mailto:julen.pina.14@ucl.ac.uk">
