--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Julen Zarate-Pina</title>
+    <meta name=”description” content=”PhD candidate at UCL. Research interests: Experimental and Behavioural Economics, Decision Theory. Contact: julen.pina.14@ucl.ac.uk”>
+
     <link rel="canonical" href="https://julenzaratepina.github.io" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="css/accordion.css">
@@ -13,6 +15,8 @@
     <link rel="stylesheet" href="css/academicons.min.css"/>
     <link href="css/academicons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
     <meta name="google-site-verification" content="Nx6PLwpZYuMpwbc-ZphGIq-czlpPPDi9pvsIYGpOkEI" />
   </head>
   <body>
