--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <i class="fas fa-envelope-square fa-1x"></i> </a> <a href="mailto:julen.pina.14@ucl.ac.uk">julen.pina.14@ucl.ac.uk</a></p>
          <h1>Research</h1>
          <h2>Working papers</h2>
-        <p style="font-size: 14px;"> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
+        <p style="font-size: 14px;margin-bottom:2px"> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
 </p>
          <h2>Work in progress</h2>
                  <p style="font-size: 14px;">Social identity and decision-making under uncertainty </p>
