--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <section>
          <h2></h2>
          <p>
-        I am a PhD student in the
- <a HREF="https://www.ucl.ac.uk/economics/"> Economics Department at University College London (UCL)</a>. 
+        I am a  research associate at the
+ <a HREF="https://www.ucl.ac.uk/economics/"> Economics Department at University College London (UCL)</a>, and laboratory manager at  <a HREF="https://centreforfinance.org/experiments.htm"> ELFE</a>.
          <p>My research interests are experimental and behavioural economics, and decision theory, with particular emphasis on how ambiguity affects economic agents' decision-making processes. 
          </p>
         <p> Here you can find my <a HREF="files/cv_zaratepina.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
