--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
  <a HREF="https://www.ucl.ac.uk/economics/"> Economics Department at University College London (UCL)</a>, and laboratory manager at  <a HREF="https://centreforfinance.org/experiments.htm"> ELFE</a>.
          <p>My research interests are experimental and behavioural economics, and decision theory, with particular emphasis on how ambiguity affects economic agents' decision-making processes. 
          </p>
+        <p> I obtained a PhD in Economics from UCL in 2021. </p>
         <p> Here you can find my <a HREF="files/cv_zaratepina.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
         <p>  <a href="mailto:julen.pina.14@ucl.ac.uk">
               <i class="fas fa-envelope-square fa-1x"></i> </a> <a href="mailto:julen.pina.14@ucl.ac.uk">julen.pina.14@ucl.ac.uk</a></p>
