--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
          <h2>Working papers</h2>
         <p style="font-size: 14px"> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
 </p>
-         <p style="font-size: 14px;margin-bottom:0.5px">Preferences over the timing of uncertainty resolution under risk and ambiguity: an experimental approach  </p>  <a HREF="files/resolution_amb_July.pdf.pdf">
-              <i class="fas fa-file-pdf"></i>
-        <button class="accordion"  style="margin-bottom:2px">Show abstract  </button>
+         <p style="font-size: 14px;margin-bottom:0.5px">Preferences over the timing of uncertainty resolution under risk and ambiguity: an experimental approach  </p>  <a HREF="files/resolution_amb_July.pdf"><i class="fas fa-file-pdf"></i></a>
+        
+        <button class="accordion"  style="margin-bottom:2px">Show abstract</button>
 <div class="panel">
 <p> This paper empirically analyses two types of preferences over the timing of resolution of uncertainty: preferences between early and late resolution and preferences between one-shot and gradual resolution of lotteries under risk and ambiguity. In an online experiment with students, we find significant differences between treatments: under risk, a majority of participants show a strict preference against gradual resolution of uncertainty, for low, medium and high ex-ante probabilities of receiving the prize of the lottery. Under ambiguity, most participants show a preference for gradual resolution of uncertainty for lotteries with a low-likelihood of winning, and an aversion towards it for medium and high likelihoods. Additionally, in both treatments we find subjects show strict preferences more frequently in the one-shot vs. gradual resolution dimension than in the early vs. late resolution dimension. Results from the experiment contribute to the  literature about the empirical validity of ambiguity models, as different models prescribe different preferences over the timing of the resolution of uncertainty.
 </p>
