--- a/index.html
+++ b/index.html
@@ -39,22 +39,23 @@
          <h2>Working papers</h2>
         <p style="font-size: 14px"> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
 </p>
-         <p style="font-size: 14px;margin-bottom:0.5px">Preferences over the timing of uncertainty resolution under risk and ambiguity: an experimental approach  </p>  <a HREF="files/resolution_amb_July.pdf"><i class="fas fa-file-pdf"></i></a>
+         <p style="font-size: 14px;margin-bottom:0.5px">Preferences over the timing of uncertainty resolution under risk and ambiguity: an experimental approach   <a HREF="files/resolution_amb_July.pdf"><i class="fas fa-file-pdf"></i></a></p> 
         
         <button class="accordion"  style="margin-bottom:2px">Show abstract</button>
 <div class="panel">
 <p> This paper empirically analyses two types of preferences over the timing of resolution of uncertainty: preferences between early and late resolution and preferences between one-shot and gradual resolution of lotteries under risk and ambiguity. In an online experiment with students, we find significant differences between treatments: under risk, a majority of participants show a strict preference against gradual resolution of uncertainty, for low, medium and high ex-ante probabilities of receiving the prize of the lottery. Under ambiguity, most participants show a preference for gradual resolution of uncertainty for lotteries with a low-likelihood of winning, and an aversion towards it for medium and high likelihoods. Additionally, in both treatments we find subjects show strict preferences more frequently in the one-shot vs. gradual resolution dimension than in the early vs. late resolution dimension. Results from the experiment contribute to the  literature about the empirical validity of ambiguity models, as different models prescribe different preferences over the timing of the resolution of uncertainty.
 </p>
-         <h2>Work in progress</h2>
-                 <p style="font-size: 14px;margin-bottom:0.5px">Uncertainty is polarising:
-Social identity and decision-making under ambiguity </p>
+  </div>
+         <p style="font-size: 14px;margin-bottom:0.5px">Uncertainty is polarising:
+Social identity and decision-making under ambiguity (paper available upon request) </p> 
          <button class="accordion" style="margin-bottom:2px">Show abstract </button>
 <div class="panel">
   <p> In this paper, I analyse how modal decisions within social groups  influence decision-making under uncertainty.  Specifically, I study how these modal decision are more often taken by members of the group as uncertainty increases. In a theoretical model, in which distancing from group's modal decision is penalised as a regret cost, I find that aligning with the in-group's modal decision  happens more often the higher is the identification with the group and it is also more frequent  under ambiguity than under risk. I design and run an online experiment  with a sample of US citizens in which social groups are formed through  political affiliation.  Results show that higher self-identification with the group leads to higher alignment with the group's modal decision and higher uncertainty (about the probability of the states of the world) generates an even stronger alignment with this decision for those with a high self-identification with the group.
 </p>
 </div>
+         <h2>Work in progress</h2>
+         <p style="font-size: 14px;margin-bottom:0.5px"> Overconfidence and self-promotion: strategic motives and differences across social groups </p>
                
-</div>
   
     <h1 style="margin-top:1cm">Teaching</h1>
     <p>I have been a teaching assistant for several courses in the Economics Department at UCL: <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/game-theory-econ0027">Game Theory</a>, <a HREF="https://www.ucl.ac.uk/economics/econ0059-advanced-microeconomic-theory ">Advanced Microeconomic Theory</a>, <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/microeconomics-econ0013">Microeconomics</a>, <a HREF="https://www.ucl.ac.uk/economics/study/undergraduate/module-list/basic-microeconomic-concepts-econ0011">Basic Microeconomic Concepts</a>. </p>
