--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
          <p style="font-size: 14px;margin-bottom:0.5px">Uncertainty is polarising:
 Social identity and decision-making under ambiguity (paper available upon request) </p> 
-        <button id="identity_abstract" class="accordion" style="margin-bottom:2px"><div id="identity_show">Show abstract</div> <div id="identity_hide">Hide abstract</div></button>
+        <button id="identity_abstract" class="accordion" style="margin-bottom:2px">Show abstract</button>
 <div class="panel">
   <p> In this paper, I analyse how modal decisions within social groups  influence decision-making under uncertainty.  Specifically, I study how these modal decision are more often taken by members of the group as uncertainty increases. In a theoretical model, in which distancing from group's modal decision is penalised as a regret cost, I find that aligning with the in-group's modal decision  happens more often the higher is the identification with the group and it is also more frequent  under ambiguity than under risk. I design and run an online experiment  with a sample of US citizens in which social groups are formed through  political affiliation.  Results show that higher self-identification with the group leads to higher alignment with the group's modal decision and higher uncertainty (about the probability of the states of the world) generates an even stronger alignment with this decision for those with a high self-identification with the group.
 </p>
