--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
          </p>
         <p> I obtained a PhD in Economics from UCL in 2021. </p>
         <p> Here you can find my <a HREF="files/cv_zaratepina.pdf"><i class="ai ai-cv-square ai-lg"></i></a>.
-        <p>  <a href="mailto:julen.pina.14@ucl.ac.uk">
-              <i class="fas fa-envelope-square fa-1x"></i> </a> <a href="mailto:julen.pina.14@ucl.ac.uk">julen.pina.14@ucl.ac.uk</a></p>
+        <p>  <a href="mailto:julen.pina@ucl.ac.uk">
+              <i class="fas fa-envelope-square fa-1x"></i> </a> <a href="mailto:julen.pina@ucl.ac.uk">julen.pina.14@ucl.ac.uk</a></p>
          <h1>Research</h1>
          <h2>Working papers</h2>
         <p style="font-size: 14px"> Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
