--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Julen Zarate-Pina</title>
-    <meta name=”description” content=”PhD candidate at UCL. Research interests: Experimental and Behavioural Economics, Decision Theory. Contact: julen.pina.14@ucl.ac.uk”>
+    <meta name=”description” content=”PhD candidate at UCL. Research interests: Experimental and Behavioural Economics, Decision Theory. Contact: julen.pina@ucl.ac.uk”>
     <link rel="canonical" href="https://julenzaratepina.github.io" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="css/accordion.css">
@@ -65,7 +65,7 @@ Social identity and decision-making under ambiguity (paper available upon reques
 I  have experience in designing, implementing and conducting lab and online experiments  at the <a HREF="https://centreforfinance.org/experiments.htm">Experimental Laboratory for Finance and Economics (ELFE)</a>.</p> -->
       </section>
       <footer>
-          <a href="mailto:julen.pina.14@ucl.ac.uk" target="_blank">
+          <a href="mailto:julen.pina@ucl.ac.uk" target="_blank">
               <i class="fas fa-envelope-square fa-2x"></i> </a>
           <a href="https://github.com/julenzaratepina">
               <i class="fab fa-github-square fa-2x"></i> </a>
