--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Julen Zarate-Pina</title>
-    <meta name=”description” content=”PhD candidate at UCL. Research interests: Experimental and Behavioural Economics, Decision Theory. Contact: julen.pina@ucl.ac.uk”>
+    <meta name=”description” content=”PhD Economics UCL. Julen Ortiz de Zarate Pina. Research interests: Experimental and Behavioural Economics, Decision Theory. Contact: julen.pina@ucl.ac.uk”>
     <link rel="canonical" href="https://julenzaratepina.github.io" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="css/accordion.css">
