--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          <p style="font-size: 14px;margin-bottom:0.5px"> Institutional Transmition of Social Capital (with Pietro Biroli, Amalia di Girolamo and Michele Giannola) </p>
       </section>
       <footer>
-          <a href="mailto:julen.pina@ucl.ac.uk" target="_blank">
+          <a href="mailto:julen.zarate-pina@ehu.eus" target="_blank">
               <i class="fas fa-envelope-square fa-2x"></i> </a>
           <a href="https://github.com/julenzaratepina">
               <i class="fab fa-github-square fa-2x"></i> </a>
