--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          <h2>Work in progress</h2>
          <p style="font-size: 14px;margin-bottom:0.5px"> Overconfidence and self-promotion: strategic motives and differences across social groups </p>
          <p style="font-size: 14px;margin-bottom:0.5px"> Time and Complexity (with Duarte Gonçalves) </p>
-         <p style="font-size: 14px;margin-bottom:0.5px"> Institutional Transmition of Social Capital (with Pietro Biroli, Amalia di Girolamo and Michele Giannola) </p>
+         <p style="font-size: 14px;margin-bottom:0.5px"> Institutional Transmission of Social Capital (with Pietro Biroli, Amalia di Girolamo and Michele Giannola) </p>
       </section>
       <footer>
           <a href="mailto:julen.zarate-pina@ehu.eus" target="_blank">
