--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
           <p>  <a href="mailto:julen.zarate-pina@ehu.eus">
               <i class="fas fa-envelope-square fa-1x"></i> </a> <a href="mailto:julen.zarate-pina@ehu.eus">julen.zarate-pina@ehu.eus</a></p>
          <h1>Research</h1>
+          <h2>Publications</h2>
+        Non-Cognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino, and Ryan Kendall)
+        Quarterly Journal of Finance, Forthcoming.
+        
+
          <h2>Working papers</h2>
-          <p style="font-size: 14px"> 
-            Risk preferences, Trust and Noncognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino and Ryan Kendall)
+          <p>
+                Risk Preferences at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani,Antonio Guarino, and Ryan Kendall)
+                FRB of New York Staff Report, 927. 
           </p>
            <p style="font-size: 14px;margin-bottom:0.5px">
              Preferences over the timing of uncertainty resolution under risk and ambiguity: an experimental approach   <a HREF="files/Resolution_uncertain_7_Nov_22.pdf">Paper <i class="fas fa-file-pdf"></i></a>
