--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <h1>Research</h1>
           <h2>Publications</h2>
         Non-Cognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino, and Ryan Kendall)
-        Quarterly Journal of Finance, Forthcoming.
+        Quarterly Journal of Finance, forthcoming.
         
 
          <h2>Working papers</h2>
