--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 FRB of New York Staff Report, 927. 
           </p>
            <p style="font-size: 14px;margin-bottom:0.5px">
-             Preferences over the timing of uncertainty resolution under risk and ambiguity: an experimental approach   <a HREF="files/Resolution_uncertain_7_Nov_22.pdf">Paper <i class="fas fa-file-pdf"></i></a>
+             Preferences Over The Timing of Uncertainty Resolution under Risk and Ambiguity: An Experiment   <a HREF="files/resolution_of_uncertainty.pdf">Paper <i class="fas fa-file-pdf"></i></a>
            </p> 
         
           <button class="accordion" id="resolution_abstract"  style="margin-bottom:2px"></button>
