--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <p>
               Non-Cognitive Skills at the Time of COVID-19: An Experiment with Professional Traders and Students (with Marco Angrisani, Marco Cipriani, Antonio Guarino, and Ryan Kendall)
               <br>
-              Quarterly Journal of Finance, forthcoming.
+              Quarterly Journal of Finance, 2024,Vol. 14, No. 02, 2440003.
           </p>
          <h2>Working papers</h2>
           <p>
